src/platformsupport/dbusmenu/qdbusmenuadaptor.cpp
@@ -51,8 +51,9 @@
 
 QT_BEGIN_NAMESPACE
 
-QDBusMenuAdaptor::QDBusMenuAdaptor(QObject *parent)
-    : QDBusAbstractAdaptor(parent)
+QDBusMenuAdaptor::QDBusMenuAdaptor(QDBusPlatformMenu *topLevelMenu)
+    : QDBusAbstractAdaptor(topLevelMenu)
+    , m_topLevelMenu(topLevelMenu)
 {
     setAutoRelaySignals(true);
 }
@@ -80,7 +81,17 @@ uint QDBusMenuAdaptor::version() const
 bool QDBusMenuAdaptor::AboutToShow(int id)
 {
     qCDebug(qLcMenu) << id;
-    return false;
+    if (id == 0) {
+        emit m_topLevelMenu->aboutToShow();
+    } else {
+        QDBusPlatformMenuItem *item = QDBusPlatformMenuItem::byId(id);
+        if (item) {
+            const QDBusPlatformMenu *menu = static_cast<const QDBusPlatformMenu *>(item->menu());
+            if (menu)
+                emit const_cast<QDBusPlatformMenu *>(menu)->aboutToShow();
+        }
+    }
+    return false;  // updateNeeded (we don't know that, so false)
 }
 
 QList<int> QDBusMenuAdaptor::AboutToShowGroup(const QList<int> &ids, QList<int> &idErrors)
@@ -88,6 +99,8 @@ QList<int> QDBusMenuAdaptor::AboutToShowGroup(const QList<int> &ids, QList<int> 
     qCDebug(qLcMenu) << ids;
     Q_UNUSED(idErrors)
     idErrors.clear();
+    Q_FOREACH (int id, ids)
+        AboutToShow(id);
     return QList<int>(); // updatesNeeded
 }
 
@@ -97,9 +110,20 @@ void QDBusMenuAdaptor::Event(int id, const QString &eventId, const QDBusVariant 
     Q_UNUSED(timestamp)
     QDBusPlatformMenuItem *item = QDBusPlatformMenuItem::byId(id);
     qCDebug(qLcMenu) << id << (item ? item->text() : QLatin1String("")) << eventId;
-    // Events occur on both menus and menuitems, but we only care if it's an item being clicked.
     if (item && eventId == QLatin1String("clicked"))
         item->trigger();
+    if (item && eventId == QLatin1String("hovered"))
+        emit item->hovered();
+    if (eventId == QLatin1String("closed")) {
+        // There is no explicit AboutToHide method, so map closed event to aboutToHide method
+        const QDBusPlatformMenu *menu = Q_NULLPTR;
+        if (item)
+            menu = static_cast<const QDBusPlatformMenu *>(item->menu());
+        else if (id == 0)
+            menu = m_topLevelMenu;
+        if (menu)
+            emit const_cast<QDBusPlatformMenu *>(menu)->aboutToHide();
+    }
 }
 
 QList<int> QDBusMenuAdaptor::EventGroup(const QDBusMenuEventList &events)
@@ -117,7 +141,7 @@ QDBusMenuItemList QDBusMenuAdaptor::GetGroupProperties(const QList<int> &ids, co
 
 uint QDBusMenuAdaptor::GetLayout(int parentId, int recursionDepth, const QStringList &propertyNames, QDBusMenuLayoutItem &layout)
 {
-    uint ret = layout.populate(parentId, recursionDepth, propertyNames);
+    uint ret = layout.populate(parentId, recursionDepth, propertyNames, m_topLevelMenu);
     qCDebug(qLcMenu) << parentId << "depth" << recursionDepth << propertyNames << layout.m_id << layout.m_properties << "revision" << ret << layout;
     return ret;
 }
