src/platformsupport/dbusmenu/qdbusmenutypes_p.h
@@ -96,7 +96,7 @@ typedef QVector<QDBusMenuItemKeys> QDBusMenuItemKeysList;
 class QDBusMenuLayoutItem
 {
 public:
-    uint populate(int id, int depth, const QStringList &propertyNames);
+    uint populate(int id, int depth, const QStringList &propertyNames, const QDBusPlatformMenu *topLevelMenu);
     void populate(const QDBusPlatformMenu *menu, int depth, const QStringList &propertyNames);
     void populate(const QDBusPlatformMenuItem *item, int depth, const QStringList &propertyNames);
 
